[gd_scene load_steps=3 format=3 uid="uid://db50iled5ohnq"]

[ext_resource type="Texture2D" uid="uid://d5i1tq0p1y7n" path="res://map-placeholder.png" id="1_2kxjm"]
[ext_resource type="Script" path="res://map_select.gd" id="1_ydwa2"]

[node name="MapSelect" type="Node2D"]
script = ExtResource("1_ydwa2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Map-placeholder" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(576, 324)
texture = ExtResource("1_2kxjm")

[node name="Area3" type="Button" parent="CanvasLayer"]
offset_left = 916.0
offset_top = 324.0
offset_right = 1041.0
offset_bottom = 448.0

[node name="Area2" type="Button" parent="CanvasLayer"]
offset_left = 541.0
offset_top = 196.0
offset_right = 666.0
offset_bottom = 320.0

[node name="Area1" type="Button" parent="CanvasLayer"]
offset_left = 156.0
offset_top = 277.0
offset_right = 281.0
offset_bottom = 401.0

[connection signal="pressed" from="CanvasLayer/Area3" to="." method="_on_area_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Area2" to="." method="_on_area_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Area1" to="." method="_on_area_1_pressed"]
